--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,12 +23,15 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:usesCleartextTraffic="true">
-        <activity android:name=".view.activity.FeedBackActivity"></activity>
-        <activity android:name=".view.activity.TicketHistoryActivity" />
-        <activity android:name=".view.activity.AttentionActivity" />
-        <activity android:name=".view.activity.UserInfoActivity" />
+        <activity android:name=".view.activity.mine.ResetInfoActivity"></activity>
+        <activity android:name=".view.activity.mine.ResetPwdActivity" />
+        <activity android:name=".view.activity.mine.ChangePWDActivity" />
+        <activity android:name=".view.activity.mine.FeedBackActivity" />
+        <activity android:name=".view.activity.mine.TicketHistoryActivity" />
+        <activity android:name=".view.activity.mine.AttentionActivity" />
+        <activity android:name=".view.activity.mine.UserInfoActivity" />
         <activity android:name=".view.activity.MessageActivity" />
         <activity android:name=".view.activity.ResignActivity" />
         <activity android:name=".view.activity.LoginActivity" />
@@ -36,14 +39,14 @@
         <activity
             android:name=".util.permisstion.PermissionActivity"
             android:theme="@style/Translucent" />
-        <activity android:name=".view.activity.WelcomeActivity" />
-        <activity android:name=".view.activity.MainActivity">
+        <activity android:name=".view.activity.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".view.activity.MainActivity" />
     </application>
 
 </manifest>
