--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,6 @@ dependencies {
     implementation 'com.chenlittleping:recyclercoverflow:1.0.6'
     //AOP彼
     implementation 'org.aspectj:aspectjrt:1.8.9'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
