--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
+
 
 android {
     compileSdkVersion 28
@@ -16,6 +18,12 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+}
+
+greendao {
+    schemaVersion 1  //版本
+    daoPackage 'com.lee.vademovies.util.db' // 一般为app包名+生成文件的文件夹名
+    targetGenDir 'src/main/java' //生成文件路径
 }
 
 dependencies {
@@ -49,9 +57,6 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     //eventbus
     implementation 'org.greenrobot:eventbus:3.1.1'
-    //greendao
-    implementation 'org.greenrobot:greendao:3.2.2'
-    implementation 'org.greenrobot:greendao-generator:3.2.2'
     //工具类       https://github.com/Blankj/AndroidUtilCode/blob/master/utilcode/README-CN.md
     implementation 'com.blankj:utilcode:1.24.2'
     //RecyclerView三方工具类 https://github.com/ChenLittlePing/RecyclerCoverFlow
@@ -59,5 +64,8 @@ dependencies {
     //AOP彼
     implementation 'org.aspectj:aspectjrt:1.8.9'
     implementation 'com.android.support:cardview-v7:28.0.0'
+    //greendao
+    implementation 'org.greenrobot:greendao-generator:3.2.2'
+    implementation 'org.greenrobot:greendao:3.2.2'
 
 }
